--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -23,8 +23,8 @@ jobs:
       - name: Setup Flutter
         uses: subosito/flutter-action@v2
         with:
+          flutter-version: '3.27.1'
           channel: 'stable'
-          flutter-version-file: pubspec.yaml
 
       - name: Install dependencies
         run: flutter pub get
@@ -33,7 +33,7 @@ jobs:
         run: flutter build apk --release
 
       - name: Build appBundle
-        run: flutter build appBundle
+        run: flutter build appbundle
 
       - name: Build IPA
         run: flutter build ipa --no-codesign
