--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -35,14 +35,6 @@ jobs:
       - name: Build appBundle
         run: flutter build appbundle
 
-      - name: Build IPA
-        run: flutter build ipa --no-codesign
-
-      - name: Compress archives and IPAs
-        run: |
-          cd build
-          tar -czf ios_build.tar.gz ios
-
       - name: Extract version from pubspec.yaml
         id: extract_version
         run: |
@@ -68,6 +60,6 @@ jobs:
       - name: Create Release
         uses: ncipollo/release-action@v1
         with:
-          artifacts: "build/app/outputs/flutter-apk/app-release.apk,build/app/outputs/bundle/release/app-release.aab,build/ios_build.tar.gz"
+          artifacts: "build/app/outputs/flutter-apk/app-release.apk,build/app/outputs/bundle/release/app-release.aab"
           tag: v${{ env.VERSION }}
           token: ${{ secrets.TOKEN }}
